force-app/main/default/objects/COMM_ProductLocationStock__c/COMM_ProductLocationStock__c.object-meta.xml
<CustomObject>
    <label>Product Location Stock</label>
    <nameField>
        <displayFormat>PLS-{0000000000}</displayFormat>
        <label>Product Location Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Location Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>