force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_AlarmisticPercExceeded__c.field-meta.xml
<CustomField>
    <fullName>COMM_AlarmisticPercExceeded__c</fullName>
    <description>Formula to identify if the Alarmistic % on related Product was exceeded.</description>
    <formula>AND(
 NOT(ISBLANK(COMM_OccupancyRate__c)),
 NOT(ISBLANK(COMM_Product__r.COMM_Alarmistic__c)),
 COMM_OccupancyRate__c &gt;= COMM_Product__r.COMM_Alarmistic__c
)</formula>
    <label>Alarmistic % Exceeded</label>
    <type>Checkbox</type>
</CustomField>