force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_Location__c.field-meta.xml
<CustomField>
    <fullName>COMM_Location__c</fullName>
    <description>OCI Location (Hour_00, Hour_01, ....)</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>