force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_OccupancyRate__c.field-meta.xml
<CustomField>
    <fullName>COMM_OccupancyRate__c</fullName>
    <description>Percentage of Reserved stock on the location</description>
    <formula>COMM_ReservedStock__c / COMM_StockOnHand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>