force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_Product__c.field-meta.xml
<CustomField>
    <fullName>COMM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Product Id</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Location Stocks</relationshipLabel>
    <relationshipName>Product_Location_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>