force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductLocation__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Identifier for the Product Location record. This is the ProductCode concatenated with the Location.

Examples: 

OPO_P1_premium_20240101_Hour_00,

OPO_P1_premium_20240101_Hour_01,

OPO_P1_premium_20240101_Subscriptions</description>
    <externalId>true</externalId>
    <label>Product Location</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>