force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_ReservedStock__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservedStock__c</fullName>
    <description>OCI Total Reserved stock on the location</description>
    <label>Reserved Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>