force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_StockDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_StockDate__c</fullName>
    <description>OCI Stock Date</description>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>