force-app/main/default/objects/COMM_ProductLocationStock__c/fields/COMM_StockOnHand__c.field-meta.xml
<CustomField>
    <fullName>COMM_StockOnHand__c</fullName>
    <description>OCI Total Stock on the location</description>
    <label>Stock On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>