force-app/main/default/objects/COMM_ProductLocationStock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_AlarmisticPercExceeded__c</columns>
    <columns>COMM_StockOnHand__c</columns>
    <columns>COMM_StockDate__c</columns>
    <columns>COMM_ReservedStock__c</columns>
    <columns>COMM_ProductLocation__c</columns>
    <columns>COMM_Product__c</columns>
    <columns>COMM_OccupancyRate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>